--- a/.gitignore
+++ b/.gitignore
@@ -97,17 +97,152 @@ int main()
 }
 
 
+PRATICAL_2A.c
+#include <stdio.h>
+#include <math.h> 
+
+int main() {
+    float a, b, c; 
+    float discriminant, root1, root2;
+
+    printf("Enter the coefficients a, b, and c: \n");
+    printf("a: ");
+    scanf("%f", &a);
+    printf("b: ");
+    scanf("%f", &b);
+    printf("c: ");
+    scanf("%f", &c);
+
+    discriminant = (b * b) - (4 * a * c);
+    if (discriminant >= 0) {
+        root1 = (-b + sqrt(discriminant)) / (2 * a);
+        root2 = (-b - sqrt(discriminant)) / (2 * a);
+        printf("Root 1 = %.4f\n", root1);
+        printf("Root 2 = %.4f\n", root2);
+    } else {
+       
+        printf("Roots are not real (imaginary).\n");
+    }
+
+    return 0; 
+}
 
 
+PRATICAL_2B.c
+#include <stdio.h>
+
+int main()
+{
+    printf("** Number Comparator **\n");
+    printf("***********************\n");
+    
+    float num1, num2, num3;
+    
+    // Get first number with validation
+    printf("Enter the first number: ");
+    if (scanf("%f", &num1) != 1) {
+        printf("Error: Invalid input for first number.\n");
+        return 1;
+    }
+    
+    // Get second number with validation
+    printf("Enter the second number: ");
+    if (scanf("%f", &num2) != 1) {
+        printf("Error: Invalid input for second number.\n");
+        return 1;
+    }
+    
+    // Get third number with validation
+    printf("Enter the third number: ");
+    if (scanf("%f", &num3) != 1) {
+        printf("Error: Invalid input for third number.\n");
+        return 1;
+    }
+    
+    // Find the largest number using clear if-else logic
+    float largest = num1;
+    
+    if (num2 > largest) {
+        largest = num2;
+    }
+    if (num3 > largest) {
+        largest = num3;
+    }
+    
+    // Display result with proper formatting
+    if (largest == (int)largest) {
+        printf("The largest number is: %d\n", (int)largest);
+    } else {
+        printf("The largest number is: %.2f\n", largest);
+    }
+    
+    return 0;
+}
 
 
+PRATICAL_2C.c
+#include <stdio.h>
 
+int main() {
+    int num1, num2, choice;
+    float result; // Use float for division to handle decimal results
 
+    // 2. Read two numbers and choice of operation
+    printf("Enter the first number: ");
+    scanf("%d", &num1);
 
+    printf("Enter the second number: ");
+    scanf("%d", &num2);
 
+    printf("\nChoose an operation:\n");
+    printf("1. Addition (+)\n");
+    printf("2. Subtraction (-)\n");
+    printf("3. Multiplication (*)\n");
+    printf("4. Division (/)\n");
+    printf("5. Modulus (%%)\n"); // Use %% to print a literal %
+    printf("Enter your choice (1-5): ");
+    scanf("%d", &choice);
 
+    // 3. Using a Switch Statement perform the following
+    switch (choice) {
+        case 1:
+            // 4. if choice is 1, add two numbers and store the result.
+            result = num1 + num2;
+            printf("Result: %d + %d = %.2f\n", num1, num2, result);
+            break;
+        case 2:
+            // 5. if choice is 2, subtract two numbers and store the result.
+            result = num1 - num2;
+            printf("Result: %d - %d = %.2f\n", num1, num2, result);
+            break;
+        case 3:
+            // 6. if choice is 3, multiply two numbers and store the result.
+            result = num1 * num2;
+            printf("Result: %d * %d = %.2f\n", num1, num2, result);
+            break;
+        case 4:
+            // 7. if choice is 4, divide two numbers and store the result.
+            if (num2 != 0) {
+                result = (float)num1 / num2; // Type-cast to float for accurate division
+                printf("Result: %d / %d = %.2f\n", num1, num2, result);
+            } else {
+                printf("Error: Division by zero is not allowed.\n");
+            }
+            break;
+        case 5:
+            // Perform modulus operation
+            if (num2 != 0) {
+                result = num1 % num2;
+                printf("Result: %d %% %d = %.0f\n", num1, num2, result);
+            } else {
+                printf("Error: Modulus by zero is not allowed.\n");
+            }
+            break;
+        default:
+            printf("Invalid choice. Please enter a number between 1 and 5.\n");
+            break;
+    }
 
-
-
-
-
+    // 9. Stop
+    return 0;
+}
