--- a/.gitignore
+++ b/.gitignore
@@ -246,3 +246,47 @@ int main() {
     // 9. Stop
     return 0;
 }
+
+
+
+
+
+PRATICAL_3A.c
+#include <stdio.h>
+
+int main() {
+    int j = 100, num, r, sum;
+    printf("Armstrong numbers between 100 and 500 are:\n");
+    while (j <= 500) {
+        sum = 0;
+        num = j;
+        while (num != 0) {
+            r = num % 10;   
+            num = num / 10;   
+            sum = sum + (r * r * r);  
+        }
+        if (sum == j) {
+            printf("%d\n", j);
+        }
+        
+        j = j + 1; 
+    }
+    
+    return 0;
+}
+
+
+
+PRATICAL_3B.c
+#include <stdio.h>
+
+int main() {
+    int n = 50, sum =0, i = 1;
+    printf("Calculating the sum of first 50 natural numbers...\n");
+    do {
+        sum = sum + i;  
+        i = i + 1;      
+    } while (i <= n);  
+    printf("The sum of first %d natural numbers is: %d\n", n, sum);
+    return 0;
+}
